[gd_scene load_steps=16 format=2]

[ext_resource path="res://Source/InteractableItems/Balances/Balance_Minor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/InteractableItems/Potions/Potion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/InteractableItems/Balances/Balance_Equals.tscn" type="PackedScene" id=3]
[ext_resource path="res://Source/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Source/InteractableItems/Balances/Balance_If_Else_Invert.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/Levels/MedievalTileSet.tres" type="TileSet" id=6]
[ext_resource path="res://Source/Levels/Level_04.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Objects/InteractableItems/Potions/green_potion_transparent.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Backgrounds/sala_if.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Objects/InteractableItems/Scrolls/scroll2_transparent.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Objects/InteractableItems/Potions/red_potion_transparent.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_blank_transparent.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_iguais_transparent.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_false_transparent.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Objects/InteractableItems/Paintings/painting_true_transparent.png" type="Texture" id=15]

[node name="Level_04" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 552.364, 143.826 )
scale = Vector2( 1.00613, 1.00576 )
texture = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 48, 48 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -327687, 97, 0, -327686, 97, 0, -327685, 98, 0, -327684, 98, 0, -327683, 98, 0, -327682, 98, 0, -327681, 98, 0, -393216, 98, 0, -393215, 98, 0, -393214, 98, 0, -393213, 98, 0, -393212, 98, 0, -393211, 98, 0, -393210, 98, 0, -393209, 98, 0, -393208, 98, 0, -393207, 98, 0, -393206, 98, 0, -393205, 98, 0, -393204, 98, 0, -393203, 98, 0, -393202, 98, 0, -393201, 98, 0, -393200, 98, 0, -393199, 98, 0, -393198, 98, 0, -393197, 98, 0, -393196, 98, 0, -393195, 98, 0, -393194, 98, 0, -393193, 98, 0, -393192, 98, 0, -393191, 98, 0, -393190, 98, 0, -393189, 118, 0, -393188, 118, 0, -393187, 116, 0, -262151, 97, 0, -262150, 97, 0, -262149, 97, 0, -262148, 97, 0, -262147, 97, 0, -262146, 98, 0, -262145, 98, 0, -327680, 98, 0, -327679, 98, 0, -327678, 98, 0, -327677, 98, 0, -327676, 97, 0, -327675, 97, 0, -327674, 97, 0, -327673, 97, 0, -327672, 97, 0, -327671, 97, 0, -327670, 97, 0, -327669, 97, 0, -327668, 97, 0, -327667, 98, 0, -327666, 98, 0, -327665, 98, 0, -327664, 98, 0, -327663, 98, 0, -327662, 97, 0, -327661, 97, 0, -327660, 97, 0, -327659, 97, 0, -327658, 97, 0, -327657, 97, 0, -327656, 97, 0, -327655, 98, 0, -327654, 98, 0, -327653, 118, 0, -327652, 118, 0, -327651, 116, 0, -196615, 97, 0, -196614, 98, 0, -196613, 98, 0, -196612, 98, 0, -196611, 98, 0, -196610, 97, 0, -196609, 97, 0, -262144, 97, 0, -262143, 97, 0, -262142, 97, 0, -262141, 98, 0, -262140, 98, 0, -262139, 98, 0, -262138, 98, 0, -262137, 98, 0, -262136, 98, 0, -262135, 98, 0, -262134, 98, 0, -262133, 98, 0, -262132, 98, 0, -262131, 98, 0, -262130, 97, 0, -262129, 97, 0, -262128, 97, 0, -262127, 98, 0, -262126, 98, 0, -262125, 98, 0, -262124, 98, 0, -262123, 98, 0, -262122, 98, 0, -262121, 98, 0, -262120, 97, 0, -262119, 97, 0, -262118, 97, 0, -262117, 118, 0, -262116, 116, 0, -262115, 116, 0, -131079, 97, 0, -131078, 97, 0, -131077, 98, 0, -131076, 118, 0, -131075, 118, 0, -131074, 118, 0, -131073, 118, 0, -196608, 118, 0, -196607, 118, 0, -196606, 118, 0, -196605, 97, 0, -196604, 97, 0, -196603, 97, 0, -196602, 97, 0, -196601, 97, 0, -196600, 118, 0, -196599, 118, 0, -196598, 118, 0, -196597, 118, 0, -196596, 118, 0, -196595, 118, 0, -196594, 96, 0, -196593, 96, 0, -196592, 96, 0, -196591, 96, 0, -196590, 96, 0, -196589, 96, 0, -196588, 96, 0, -196587, 96, 0, -196586, 96, 0, -196585, 96, 0, -196584, 96, 0, -196583, 118, 0, -196582, 118, 0, -196581, 116, 0, -196580, 118, 0, -196579, 118, 0, -65543, 98, 0, -65542, 98, 0, -65541, 97, 0, -65540, 118, 0, -65539, 96, 0, -65538, 96, 0, -65537, 96, 0, -131072, 96, 0, -131071, 97, 0, -131070, 97, 0, -131069, 97, 0, -131068, 96, 0, -131067, 96, 0, -131066, 96, 0, -131065, 97, 0, -131064, 97, 0, -131063, 96, 0, -131062, 96, 0, -131061, 96, 0, -131060, 96, 0, -131059, 96, 0, -131058, 118, 0, -131057, 118, 0, -131056, 118, 0, -131055, 118, 0, -131054, 118, 0, -131053, 118, 0, -131052, 118, 0, -131051, 118, 0, -131050, 118, 0, -131049, 118, 0, -131048, 96, 0, -131047, 96, 0, -131046, 118, 0, -131045, 116, 0, -131044, 116, 0, -131043, 118, 0, -7, 98, 0, -6, 97, 0, -5, 97, 0, -4, 96, 0, -3, 118, 0, -2, 118, 0, -1, 118, 0, -65536, 115, 0, -65535, 117, 0, -65534, 117, 0, -65533, 117, 0, -65532, 113, 0, -65531, 117, 0, -65530, 117, 0, -65529, 117, 0, -65528, 113, 0, -65527, 117, 0, -65526, 117, 0, -65525, 117, 0, -65524, 113, 0, -65523, 117, 0, -65522, 117, 0, -65521, 117, 0, -65520, 113, 0, -65519, 117, 0, -65518, 117, 0, -65517, 117, 0, -65516, 113, 0, -65515, 117, 0, -65514, 104, 0, -65513, 118, 0, -65512, 118, 0, -65511, 96, 0, -65510, 118, 0, -65509, 118, 0, -65508, 116, 0, -65507, 116, 0, 65529, 98, 0, 65530, 97, 0, 65531, 97, 0, 65532, 118, 0, 65533, 118, 0, 65534, 118, 0, 65535, 85, 0, 23, 88, 0, 24, 118, 0, 25, 96, 0, 26, 118, 0, 27, 118, 0, 28, 118, 0, 29, 116, 0, 131065, 98, 0, 131066, 98, 0, 131067, 96, 0, 131068, 118, 0, 131069, 118, 0, 131070, 118, 0, 131071, 89, 0, 65559, 87, 0, 65560, 118, 0, 65561, 96, 0, 65562, 118, 0, 65563, 118, 0, 65564, 118, 0, 65565, 116, 0, 196601, 97, 0, 196602, 98, 0, 196603, 97, 0, 196604, 118, 0, 196605, 118, 0, 196606, 118, 0, 196607, 89, 0, 131095, 87, 0, 131096, 118, 0, 131097, 118, 0, 131098, 96, 0, 131099, 118, 0, 131100, 116, 0, 131101, 118, 0, 262137, 97, 0, 262138, 98, 0, 262139, 98, 0, 262140, 118, 0, 262141, 118, 0, 262142, 118, 0, 262143, 89, 0, 196631, 87, 0, 196632, 118, 0, 196633, 118, 0, 196634, 96, 0, 196635, 116, 0, 196636, 118, 0, 196637, 118, 0, 327673, 98, 0, 327674, 98, 0, 327675, 97, 0, 327676, 118, 0, 327677, 118, 0, 327678, 118, 0, 327679, 80, 0, 262167, 53, 0, 262168, 118, 0, 262169, 118, 0, 262170, 118, 0, 262171, 116, 0, 262172, 116, 0, 262173, 118, 0, 393209, 98, 0, 393210, 97, 0, 393211, 97, 0, 393212, 96, 0, 393213, 96, 0, 393214, 118, 0, 393215, 85, 0, 327680, 68, 0, 327681, 76, 0, 327682, 79, 0, 327683, 75, 0, 327690, 76, 0, 327691, 79, 0, 327692, 75, 0, 327693, 68, 0, 327694, 58, 0, 327695, 47, 0, 327696, 46, 0, 327697, 45, 0, 327698, 44, 0, 327699, 68, 0, 327700, 76, 0, 327701, 79, 0, 327702, 75, 0, 327703, 88, 0, 327704, 118, 0, 327705, 118, 0, 327706, 118, 0, 327707, 118, 0, 327708, 116, 0, 327709, 118, 0, 458745, 98, 0, 458746, 98, 0, 458747, 97, 0, 458748, 118, 0, 458749, 96, 0, 458750, 118, 0, 458751, 89, 0, 393216, 96, 0, 393217, 97, 0, 393218, 96, 0, 393219, 98, 0, 393220, 68, 0, 393221, 58, 0, 393222, 47, 0, 393223, 46, 0, 393224, 45, 0, 393225, 44, 0, 393226, 118, 0, 393227, 118, 0, 393228, 118, 0, 393229, 118, 0, 393230, 72, 0, 393231, 118, 0, 393232, 118, 0, 393233, 118, 0, 393234, 118, 0, 393235, 118, 0, 393236, 118, 0, 393237, 118, 0, 393238, 118, 0, 393239, 87, 0, 393240, 118, 0, 393241, 118, 0, 393242, 118, 0, 393243, 118, 0, 393244, 118, 0, 393245, 116, 0, 524281, 97, 0, 524282, 98, 0, 524283, 98, 0, 524284, 96, 0, 524285, 96, 0, 524286, 118, 0, 524287, 89, 0, 458752, 97, 0, 458753, 96, 0, 458754, 97, 0, 458755, 99, 0, 458756, 98, 0, 458757, 72, 0, 458758, 118, 0, 458759, 116, 0, 458760, 118, 0, 458761, 118, 0, 458762, 118, 0, 458763, 118, 0, 458764, 118, 0, 458765, 118, 0, 458766, 118, 0, 458767, 118, 0, 458768, 118, 0, 458769, 118, 0, 458770, 118, 0, 458771, 118, 0, 458772, 118, 0, 458773, 118, 0, 458774, 118, 0, 458775, 87, 0, 458776, 118, 0, 458777, 118, 0, 458778, 118, 0, 458779, 116, 0, 458780, 116, 0, 458781, 116, 0, 589817, 97, 0, 589818, 97, 0, 589819, 98, 0, 589820, 118, 0, 589821, 118, 0, 589822, 118, 0, 589823, 80, 0, 524288, 118, 0, 524289, 118, 0, 524290, 99, 0, 524291, 98, 0, 524292, 99, 0, 524293, 118, 0, 524294, 116, 0, 524295, 118, 0, 524296, 116, 0, 524297, 118, 0, 524298, 118, 0, 524299, 118, 0, 524300, 118, 0, 524301, 118, 0, 524302, 118, 0, 524303, 118, 0, 524304, 118, 0, 524305, 118, 0, 524306, 118, 0, 524307, 118, 0, 524308, 118, 0, 524309, 118, 0, 524310, 118, 0, 524311, 53, 0, 524312, 118, 0, 524313, 118, 0, 524314, 118, 0, 524315, 116, 0, 524316, 118, 0, 524317, 118, 0, 655353, 98, 0, 655354, 98, 0, 655355, 116, 0, 655356, 116, 0, 655357, 116, 0, 655358, 116, 0, 655359, 98, 0, 589824, 98, 0, 589825, 118, 0, 589826, 118, 0, 589827, 118, 0, 589828, 118, 0, 589829, 118, 0, 589830, 118, 0, 589831, 98, 0, 589832, 98, 0, 589833, 98, 0, 589834, 118, 0, 589835, 118, 0, 589836, 118, 0, 589837, 118, 0, 589838, 118, 0, 589839, 98, 0, 589840, 98, 0, 589841, 98, 0, 589842, 118, 0, 589843, 118, 0, 589844, 118, 0, 589845, 118, 0, 589846, 98, 0, 589847, 98, 0, 589848, 118, 0, 589849, 118, 0, 589850, 118, 0, 589851, 118, 0, 589852, 118, 0, 589853, 118, 0, 720889, 116, 0, 720890, 116, 0, 720891, 116, 0, 720892, 98, 0, 720893, 98, 0, 720894, 116, 0, 720895, 116, 0, 655360, 116, 0, 655361, 98, 0, 655362, 98, 0, 655363, 98, 0, 655364, 118, 0, 655365, 98, 0, 655366, 98, 0, 655367, 98, 0, 655368, 118, 0, 655369, 98, 0, 655370, 98, 0, 655371, 98, 0, 655372, 118, 0, 655373, 118, 0, 655374, 98, 0, 655375, 98, 0, 655376, 118, 0, 655377, 98, 0, 655378, 98, 0, 655379, 118, 0, 655380, 98, 0, 655381, 98, 0, 655382, 98, 0, 655383, 98, 0, 655384, 98, 0, 655385, 98, 0, 655386, 116, 0, 655387, 116, 0, 655388, 116, 0, 655389, 116, 0, 786425, 116, 0, 786426, 116, 0, 786427, 98, 0, 786428, 98, 0, 786429, 116, 0, 786430, 116, 0, 786431, 116, 0, 720896, 116, 0, 720897, 116, 0, 720898, 116, 0, 720899, 98, 0, 720900, 98, 0, 720901, 98, 0, 720902, 118, 0, 720903, 118, 0, 720904, 118, 0, 720905, 118, 0, 720906, 118, 0, 720907, 98, 0, 720908, 98, 0, 720909, 98, 0, 720910, 118, 0, 720911, 118, 0, 720912, 118, 0, 720913, 118, 0, 720914, 98, 0, 720915, 98, 0, 720916, 118, 0, 720917, 118, 0, 720918, 118, 0, 720919, 118, 0, 720920, 118, 0, 720921, 98, 0, 720922, 98, 0, 720923, 116, 0, 720924, 116, 0, 720925, 116, 0 )

[node name="Potions" type="Node2D" parent="."]

[node name="Potion" parent="Potions" instance=ExtResource( 2 )]
position = Vector2( 288.078, 275.891 )

[node name="Sprite" parent="Potions/Potion" index="1"]
texture = ExtResource( 8 )

[node name="Potion2" parent="Potions" instance=ExtResource( 2 )]
position = Vector2( 336.431, 275.891 )

[node name="Potion3" parent="Potions" instance=ExtResource( 2 )]
position = Vector2( 383.5, 275.891 )

[node name="Sprite" parent="Potions/Potion3" index="1"]
texture = ExtResource( 11 )

[node name="Paintings" type="Node2D" parent="."]

[node name="Painting" type="Sprite" parent="Paintings"]
position = Vector2( 652.685, 141.142 )
texture = ExtResource( 12 )

[node name="Painting_True" type="Sprite" parent="Paintings"]
visible = false
position = Vector2( 652.685, 141.142 )
texture = ExtResource( 15 )

[node name="Painting2" type="Sprite" parent="Paintings"]
position = Vector2( 834.729, 141.142 )
texture = ExtResource( 12 )

[node name="Painting_False" type="Sprite" parent="Paintings"]
visible = false
position = Vector2( 834.729, 141.142 )
texture = ExtResource( 14 )

[node name="Painting_Iguais" type="Sprite" parent="Paintings"]
visible = false
position = Vector2( 1033.16, 141.142 )
texture = ExtResource( 13 )

[node name="Painting3" type="Sprite" parent="Paintings"]
position = Vector2( 1033.16, 141.142 )
texture = ExtResource( 12 )

[node name="Painting_True2" type="Sprite" parent="Paintings"]
visible = false
position = Vector2( 1033.16, 141.142 )
texture = ExtResource( 15 )

[node name="Balances" type="Node2D" parent="."]

[node name="Balance_Equals" parent="Balances" instance=ExtResource( 3 )]
position = Vector2( 1032.51, 205.97 )

[node name="Balance_If_Else_Invert" parent="Balances" instance=ExtResource( 5 )]
position = Vector2( 835.351, 205.798 )
animation = "idle"
frame = 0
flip_h = false

[node name="Balance_Minor" parent="Balances" instance=ExtResource( 1 )]
position = Vector2( 652.073, 207.441 )
animation = "idle"
frame = 0

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 70.5891, 214.584 )

[node name="Scroll" parent="Player" index="4"]
position = Vector2( -246.671, -77.6895 )
texture = ExtResource( 10 )

[node name="Label" parent="Player/Scroll" index="0"]
margin_left = -46.5525
margin_top = -47.9529
margin_right = 51.4472
margin_bottom = -16.9529
text = "print(3 > 2)"

[node name="Label2" parent="Player/Scroll" index="1"]
margin_left = -47.0713
margin_top = -30.1028
margin_right = 55.9285
margin_bottom = 0.897163
text = "print(2 < 1)"

[node name="Label3" parent="Player/Scroll" index="2"]
margin_left = -48.0882
margin_top = -13.6759
margin_right = 46.9118
margin_bottom = 1.32414
text = "print(2 == 2)"

[node name="Label4" parent="Player/Scroll" index="3"]
margin_left = -99.1927
margin_top = -54.3394
margin_right = 4.8073
margin_bottom = -40.3394
text = "   print(\"Menor\")"

[node name="Label5" parent="Player/Scroll" index="4"]
margin_left = -101.328
margin_top = -38.31
margin_right = -41.3284
margin_bottom = -24.31
text = "if 2 == 2:"

[node name="Label6" parent="Player/Scroll" index="5"]
margin_left = -100.247
margin_top = -23.3232
margin_right = 6.75301
margin_bottom = -9.32322
text = "   print(\"Iguais\")"

[editable path="Potions/Potion"]

[editable path="Potions/Potion2"]

[editable path="Potions/Potion3"]

[editable path="Player"]
